--- a/git-demo/index.html
+++ b/git-demo/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
+    <script src="aaa.js"></script>
+    <link href="css.css">
 </head>
 
 <body>
